<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        tools:context="com.macrealstudios.justjava3.MainActivity">

        <!--Making a custom tool bar-->
        <RelativeLayout
            android:id="@+id/titleBar"
            style="@style/captureTitleBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <!--Title of app-->
            <TextView
                android:id="@+id/textView3"
                style="@style/activityTitleText"
                android:background="@color/colorPrimaryDark"
                android:text="@string/appNameTitle" />
        </RelativeLayout>

        <!--Name Edit Box-->
        <EditText
            android:id="@+id/name"
            style="@style/nameText"
            android:layout_below="@+id/titleBar"
            android:hint="@string/nameQuestion"
            android:inputType="textCapWords" />

        <!--White Line-->
        <View
            style="@style/line"
            android:layout_below="@id/name" />

        <TextView
            android:id="@+id/cups"
            style="@style/HeaderTextStyle"
            android:layout_below="@id/name"
            android:text="@string/cups" />

        <!--Holder view for quantity of java-->
        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/centeredLayout"
            android:layout_below="@id/cups">

            <Button
                android:id="@+id/decrementBtn"
                style="@style/quantityBtnStyle"
                android:onClick="decrement"
                android:text="@string/negative" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/numOfCups"
                android:text="@string/numOfCups" />

            <Button
                android:id="@+id/incrementBtn"
                style="@style/quantityBtnStyle"
                android:onClick="increment"
                android:text="@string/plus" />
        </LinearLayout>

        <View
            style="@style/line"
            android:layout_below="@id/linearLayout" />

        <TextView
            android:id="@+id/toppingTitle"
            style="@style/HeaderTextStyle"
            android:layout_below="@id/linearLayout"
            android:text="@string/toppings" />

        <!--Toppings holder-->
        <LinearLayout
            android:id="@+id/toppingHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toppingTitle"
            android:orientation="horizontal"
            android:padding="25dp">

            <CheckBox
                android:id="@+id/cinnamon_checkbox"
                style="@style/checkboxStyle"
                android:text="@string/cinnamon" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                style="@style/checkboxStyle"
                android:text="@string/whippedCream" />
        </LinearLayout>

        <View
            style="@style/line"
            android:layout_below="@id/toppingHolder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toppingHolder"
            android:orientation="vertical">

            <!--Thank you text holder-->
            <TextView
                android:id="@+id/summaryView"
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="25dp" />

            <!--Submit button-->
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:onClick="submitOrder"
                android:padding="25dp"
                android:text="@string/orderBtn"
                android:textColor="#ffff"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
